tests/integration/options/options_per_document/AUTO_LEVELS/12_option_is_on_but_composite_requirement_level_is_provided/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail
CHECK: error: [COMPOSITE_REQUIREMENT].LEVEL field is provided. This contradicts to the option [DOCUMENT].OPTIONS.AUTO_LEVELS set to On. Composite requirement: SDocCompositeNode{{.*}}.
